# GPUACC

./: .gitignore  Week1_CPUvsGPU.ipynb  Week2.ipynb  matmul_cpu.jl  svd_cpu.jl
CXX/Boltzmann/: CMakeLists.txt  maxwell_bkw_omp.cpp  maxwell_bkw_serial.cpp
CXX/Boltzmann/Collisions/: CMakeLists.txt  boltzmann_collisions.cpp  boltzmann_collisions.hpp  boltzmann_collisions_omp.cpp  boltzmann_collisions_omp.hpp  boltzmann_collisions_serial.cpp  boltzmann_collisions_serial.hpp
CXX/Boltzmann/Parameters/: parameters.hpp
CXX/Boltzmann/SphericalDesign/: CMakeLists.txt  spherical_design.cpp  spherical_design.hpp
CXX/Boltzmann/Utilities/: CMakeLists.txt  Solver_Manager.hpp  gauss_legendre.cpp  gauss_legendre.hpp  parameters.hpp  sincc.hpp  statistics.hpp
CXX/GEMM/: CMakeLists.txt  cublas_dgemm.cu  dgemm_benchmark.cu
Eigen/: benchmark_eigen.sb  eigen_cpu.jl  eigen_gpu.jl
Julia/Eigen/: eigen_cpu.jl
Julia/Krylov_low-rank/: Coefficients.jl  SolverParameters.jl  bases.jl  benchmark_krylov_2D.sb  coeff_test.jl  cpu_solver_2D.jl  extended_krylov_step.jl  materialize_Q.jl
Julia/Krylov_low-rank/original_solver/: cpu_solver_2D.jl  gpu_solver_2D.jl
Julia/LU/: benchmark_lu.sb  lu_gpu.jl
Julia/MatMul/: benchmark_matmul.sb  matmul_cpu.jl
Julia/QR/: qr_cpu.jl  qr_data.out  qr_gpu.jl
Julia/SVD/: svd_cpu.jl  svd_data.out  svd_gpu.jl
Krylov_low-rank/: State.jl  Workspace.jl  bases.jl  cpu_solver_2D.jl  diffcheb.jl  extended_krylov_step.jl  gpu_solver_2D.jl  materialize_Q.jl  ndgrid.jl  sylvester.jl  wrapped_qr.jl
Krylov_low-rank/original_solver/: cpu_solver_2D.jl  experimental.jl  gpu_solver_2D.jl  test_solver_2D.jl
LU/: lu_cpu.jl  lu_gpu.jl
MatMul/: benchmark_matmul.sb  matmul_cpu.jl  matmul_data.out  matmul_gpu.jl
NSight/: svd_gpu.jl
QR/: benchmark_qr.sb  qr_cpu.jl  qr_gpu.jl
SVD/: benchmark_svd.sb  svd_cpu.jl  svd_gpu.jl
Sylvester/: benchmark_sylvester.sb  benchmark_sylvester_2D.sb  diffmat2.jl  experimental.jl  sylvester_cpu_2D.jl  sylvester_extended_krylov.jl  sylvester_extended_krylov_optimized.jl  sym_sylvester.jl
